syntax = "proto3";
package jim380.re.fix;

option go_package = "github.com/jim380/Re/x/fix/types";

message TradingSession {
  string sessionID = 1;
  TradingSessionStatusReport TradingSessionStatusReport = 2;
}

// TradingSessionStatusReport with fields, tags and descriptions.
message TradingSessionStatusReport {

  // (336)	Identifies the specific trading session for which status is
  // requested
  string tradingSessionID = 1;

  // (625)	Identifies a specific sub-session or sub-segment within a trading
  // session
  string tradingSessionSubID = 2;

  // (335)	Unique identifier assigned by the party generating the request
  string tradSesReqID = 3;

  // (1301)	Identifies the market or exchange for which the trading session
  // status is requested
  string marketID = 4;

  // (263) Indicates whether the request is for a one-time snapshot or
  // subscription for updates
  string subscriptionRequest = 5;

  // (48)	Identifier for the security being traded in the session
  string securityID = 6;

  // (22)	Identifies the source of the security identifier
  string securityIDSource = 7;

  // (55)	Symbol representing the security being traded in the session
  string symbol = 8;

  // 207	Exchange where the security is listed
  string securityExchange = 9;

  // (1300)	Identifies the specific market segment or sector within the
  // trading session
  string marketSegmentID = 10;

  // (263) Type of trading session status request
  int64 tradSesReqType = 11;

  // (123)	Sub-type of trading session status request
  int64 tradSesSubReqType = 12;

  // (338)	Method used to determine the trading session
  int64 tradSesMethod = 13;

  // (339)	Mode of trading for the trading session
  int64 tradSesMode = 14;

  // (336) Date of the trading session for which status is requested
  string tradingSessionDate = 15;

  // (338)Time of the trading session for which status is requested
  string tradingSessionTime = 16;

  // (1147) Time of the sub-session or sub-segment within a trading session
  string tradingSessionSubTime = 17;

  // (432) Date and time when the trading session status request is no longer
  // valid and should be disregarded
  string expirationDate = 18;

  // owner
  string creator = 19;
}
